type package